# secretsanta

./: .gitignore  Cargo.toml  create_binary.sh  plot
santafiles/: test.santa
src/: builtins.rs  database.rs  error.rs  eval.rs  function.rs  grammar.pest  main.rs  manual.rs  networking.rs  object.rs  parser.rs
