[package]
name = "secretsanta"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.2"
clap = "2.33.0"
pest_derive = "2.1.0"
failure = "0.1.6"
regex = "1"
colored = "1.9"

[profile.release]
#opt-level=3
#lto=true